--- a/rian-bootcamp-api/package.json
+++ b/rian-bootcamp-api/package.json
@@ -52,6 +52,18 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "@prettier/plugin-pug": "^1.18.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "ndb": "^1.1.5",
+    "parcel-bundler": "^1.12.5",
+    "prettier": "^1.19.1"
   }
 }
