--- a/rian-bootcamp-api/package.json
+++ b/rian-bootcamp-api/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Development - Bootcamp booking Rest Api with Node.js, Express.js and MongoDB",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production & node server",
+    "start": "cross-env NODE_ENV=production & node server",
     "dev": "nodemon server"
   },
   "repository": {
@@ -52,8 +52,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "@prettier/plugin-pug": "^1.18.0",
+    "cross-env": "^7.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -63,6 +63,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "ndb": "^1.1.5",
+    "nodemon": "^2.0.15",
     "parcel-bundler": "^1.12.5",
     "prettier": "^1.19.1"
   }
