--- a/rian-bootcamp-api/package.json
+++ b/rian-bootcamp-api/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-geocoder": "^3.28.0",
     "nodemailer": "^6.7.2",
     "slugify": "^1.6.5",
