--- a/rian-bootcamp-api/package.json
+++ b/rian-bootcamp-api/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "cookies-parser": "^1.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
